# relix

./: .Rbuildignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  DESCRIPTION  LICENSE.txt  LICENSE_Armadillo.txt  Makefile  NAMESPACE  NOTICE_Armadillo.txt  README.md  benchmark_test.R  benchmark_test2.R  build-and-test-cpp.sh  build_R.sh  builder.cmake  clean.sh  create_compile_commands.sh  rcpp_includes.R  rebuild_R.sh  rebuild_cpp.sh  smoke_test.R  test_cpp.sh  uninstall_R.sh  vcpkg.json
.github/workflows/: build-and-test-cpp.yml
R/: CMakeLists.txt  RcppExports.R  relix-package.R  relix.R
Rscripts/: benchmark1.R  benchmark2.R  rcpp_includes.R  smoke_test.R
include/: algo_base.h  algo_last.h  algo_naive.h  column_contribution.h  impy.h  model.h  permutations.h  relix.h  sort.h
inst/include/: algos.h  cc.h  lm.h  relix.h  utils.h
py/: CMakeLists.txt  pyproject.toml
py/relix/: __init__.py
scripts/: clean.cmake  r_build.cmake  r_build_win.cmake
src/: Makevars  RcppExports.cpp  algo_first.cpp  algo_last.cpp  algo_lmg.cpp  algos.cpp  cc.cpp  impy.cpp  lm.cpp  model.cpp  relix.cpp  relix_py.cpp  relix_r.cpp  utils.cpp
src/algos/: algo_base.cpp  algo_last.cpp  algo_naive.cpp  first.cpp  last.cpp  lmg.cpp
src/utilities/: column_contribution.cpp  permutations.cpp  sort.cpp
tests/: CMakeLists.txt  relix_test  testthat.R
tests/cpp/: CMakeLists.txt
tests/cpp/data/: mtcars.csv
tests/cpp/include/fixtures/: mtcars.h
tests/cpp/src/: test_algos.cpp  test_lm.cpp
tests/data/: sample1.csv  sample2.csv
tests/include/fixtures/: mtcars.h
tests/src/: test_algo_last.cpp  test_algo_naive.cpp  test_algos.cpp  test_base.cpp  test_lm.cpp  test_main.cpp  test_model.cpp  test_relix.cpp
tests/testthat/: test-smoke.R
