[project]
name = "relix"
version = "0.1.0"
authors = [ { name="michael hernandez "} ]
description = "relix is a library to compute the relative importance of predictors in a linear regression"
readme = "../README.md"
requires-python = ">=3.11"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/michhernand/relix"
Issues = "https://github.com/michhernand/relix/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["relix/**", "relix_py.*"]

[tool.hatch.build.targets.wheel]
include = ["relix/**", "relix_py.*"]
packages = ["relix"]

# [tool.hatch.metadata]
# directories = ["py/relix"]
